z-index issue resolved

--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,9 @@ padding:0px;
 /* bg variable*/
 :root{
 --main-color: rgba(170, 58, 173,.9);
+--mid:1;
+--high:11;
+--low:-1
 
 }
 
@@ -20,13 +23,11 @@ transition: .5s ease-in-out;
     transition: all .6s ease-in-out;
     opacity: 0;
     margin:auto !important;
-    z-index:9999999;
     position: fixed;
 width:100vw;
     border-radius: 12px;
     border:4px solid var(--main-color);
     background-image: linear-gradient(rgba(52, 4, 61, 0.8),rgba(190, 60, 202, 0.4));
-/*visibility: hidden;*/
 }
 
 .visible{
@@ -40,7 +41,6 @@ font-weight: bold;
 color:#22d43a;
 color:#e42e21;
 font-size:18px;
-text-shadow: 0 0 3px #FFF;
 
 }
 .form-group{
